--- a/client/components/Carousels/Body3Carousel.css
+++ b/client/components/Carousels/Body3Carousel.css
@@ -1,137 +1,92 @@
-#body3Heading{
-    font-family:Helvetica;
-    font-size: 30px;
-    font-weight:500;
-    padding-left: 58px;
-    /* padding-bottom: 60px; */
-    /* padding-top: 96px ; */
-
+#body3Heading {
+  font-family: Helvetica;
+  font-size: 30px;
+  font-weight: 500;
+  padding-left: 58px;
 }
-
-  #Body3Carousel {
-    width: 94vw;
-    margin: auto;
-  }
-  
-  .carouselContainer {
-    width: 5500px; 
-    display: flex;
-    overflow-x: auto;
-  }
-  
-  .horizontal-scroll {
-    overflow-x: auto;
-  }
-  
-  
+#Body3Carousel {
+  width: 94vw;
+  margin: auto;
+}
+.carouselContainer {
+  width: 5500px;
+  display: flex;
+  overflow-x: auto;
+}
+.horizontal-scroll {
+  overflow-x: auto;
+}
 #Body3Carousel::-webkit-scrollbar {
-    height: 7px;
-  }
-  
-  #Body3Carousel::-webkit-scrollbar-thumb {
-    background-color: #707072;
-  }
-  
-  #Body3Carousel::-webkit-scrollbar-track {
-    background-color: white;
-  }
-
+  height: 7px;
+}
+#Body3Carousel::-webkit-scrollbar-thumb {
+  background-color: #707072;
+}
+#Body3Carousel::-webkit-scrollbar-track {
+  background-color: white;
+}
 #Body3Carousel .slick-track {
-    height: 100%;
-    padding: 58px;  
+  height: 100%;
+  padding: 58px;
 }
-.Body3IMGs{
-    width: 92%;
-    height: 90%;
-    position: relative
+.Body3IMGs {
+  width: 92%;
+  height: 90%;
+  position: relative;
 }
-
-.Body3IMGs img{
-    width: 92%;
-    height: 90%;
-    object-fit: cover;
-    border-radius: 5px;
+.Body3IMGs img {
+  width: 92%;
+  height: 90%;
+  object-fit: cover;
+  border-radius: 5px;
 }
-
-
-#Body3Carousel .slick-slide{
-    margin-right: -36px;
-    
+#Body3Carousel .slick-slide {
+  margin-right: -36px;
 }
-
-.shoeName{
-    color: #111111;
-    font-size: 16px;
-    font-family: Helvetica;
+.shoeName {
+  color: #111111;
+  font-size: 16px;
+  font-family: Helvetica;
 }
-
-.smallerText{
-    color: #707072;
-    font-size: 16px
-
+.smallerText {
+  color: #707072;
+  font-size: 16px;
 }
-#crossedOffText{
-    color: #707072;
-    text-decoration: line-through;
-    font-size: 16px;
-    font-family: Helvetica;
+#crossedOffText {
+  color: #707072;
+  text-decoration: line-through;
+  font-size: 16px;
+  font-family: Helvetica;
 }
-
-
 #Body3Carousel .slick-prev,
 #Body3Carousel .slick-next {
-  width: 50px; 
-  height: 50px; 
-  background: none; 
-  border: none; 
+  width: 50px;
+  height: 50px;
+  background: none;
+  border: none;
   cursor: pointer;
-  
+}
+.left,
+.right {
+  float: right;
+  background-position: center;
+  margin-right: 60px;
+  margin-bottom: 10px;
+  margin-top: 0;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+}
+.left {
+  margin-right: 20px;
 }
 
-/* #Body3Carousel .slick-prev::before,
-#Body3Carousel .slick-next::before {
-  content: ''; 
-  display: block;
+.left:hover,
+.right:hover {
+  background-color: #d5d5d5;
 }
 
-#Body3Carousel .slick-prev {
-    background-image: url("data:image/svg+xml;utf8,<svg fill='%23f5f5f5' height='200px' width='200px' version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='-49.35 -49.35 592.16 592.16' xml:space='preserve' stroke='%23f5f5f5' stroke-width='0.00493456' transform='rotate(180)'><g id='SVGRepo_bgCarrier' stroke-width='0' transform='translate(133.23311999999999,133.23311999999999), scale(0.46)'><rect x='-49.35' y='-49.35' width='592.16' height='592.16' rx='296.08' fill='%23d6d6d6' strokewidth='0'></rect></g><g id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round' stroke='%23CCCCCC' stroke-width='0.986912'></g><g id='SVGRepo_iconCarrier'> <g> <g> <path d='M246.73,0C110.682,0,0.002,110.68,0.002,246.736c0,136.036,110.68,246.72,246.728,246.72s246.724-110.684,246.724-246.72 C493.454,110.68,382.778,0,246.73,0z M321.138,250.492L210.822,360.804c-2.004,2.008-5.548,2.008-7.556,0l-8.98-8.968 c-2.076-2.084-2.072-5.48,0.004-7.564l94.952-94.94c0.712-0.72,1.116-1.7,1.116-2.732c0-1.016-0.408-2.004-1.116-2.72 l-94.78-94.776c-1-1-1.56-2.344-1.56-3.792c0-1.42,0.556-2.772,1.556-3.764l8.968-8.976c1.004-1,2.352-1.556,3.78-1.556 c1.436-0.008,2.772,0.556,3.776,1.556l110.156,110.152c1.02,1.016,1.572,2.372,1.552,3.936 C322.71,248.116,322.158,249.476,321.138,250.492z'></path> </g> </g> </g></svg>");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    left: 1740px;
+.left svg:hover,
+.right svg:hover {
+  fill: none;
 }
-
-#Body3Carousel .slick-next {
-    background-image: url("data:image/svg+xml;utf8,<svg fill='%23f5f5f5' height='200px' width='200px' version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='-49.35 -49.35 592.16 592.16' xml:space='preserve' stroke='%23f5f5f5' stroke-width='0.00493456' transform='rotate(0)'><g id='SVGRepo_bgCarrier' stroke-width='0' transform='translate(133.23311999999999,133.23311999999999), scale(0.46)'><rect x='-49.35' y='-49.35' width='592.16' height='592.16' rx='296.08' fill='%23d6d6d6' strokewidth='0'></rect></g><g id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round' stroke='%23CCCCCC' stroke-width='0.986912'></g><g id='SVGRepo_iconCarrier'> <g> <g> <path d='M246.73,0C110.682,0,0.002,110.68,0.002,246.736c0,136.036,110.68,246.72,246.728,246.72s246.724-110.684,246.724-246.72 C493.454,110.68,382.778,0,246.73,0z M321.138,250.492L210.822,360.804c-2.004,2.008-5.548,2.008-7.556,0l-8.98-8.968 c-2.076-2.084-2.072-5.48,0.004-7.564l94.952-94.94c0.712-0.72,1.116-1.7,1.116-2.732c0-1.016-0.408-2.004-1.116-2.72 l-94.78-94.776c-1-1-1.56-2.344-1.56-3.792c0-1.42,0.556-2.772,1.556-3.764l8.968-8.976c1.004-1,2.352-1.556,3.78-1.556 c1.436-0.008,2.772,0.556,3.776,1.556l110.156,110.152c1.02,1.016,1.572,2.372,1.552,3.936 C322.71,248.116,322.158,249.476,321.138,250.492z'></path> </g> </g> </g></svg>");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    right: 60px
-} */
-
-.left, .right{
-    float: right;
-    background-position: center;
-    margin-right: 60px;
-    margin-bottom: 10px;
-    margin-top:0;
-    border: none;
-    border-radius: 50%;
-    padding: 10px;
-}
-
-.left{
-    margin-right:20px;
-}
-
-.left:hover, .right:hover{
-    background-color: #d5d5d5;
-}
-
-.left svg:hover, .right svg:hover{
-    fill:none;
-}
-
-
-
